Apply Spotless formatting cleanup